packages/svelte/tests/validator/samples/inline-new-class-3/input.svelte
<script>
	class Foo {
		foo = $state(0)
	}
	function bar() {
		const a = new Foo();
	}
</script>
