packages/svelte/tests/compiler-errors/samples/runes-duplicate-props/main.svelte
<script>
	const { foo } = $props();
	const { bar } = $props();
</script>
